--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -57,7 +57,7 @@
               </button>
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body"><li> Bicampeon del All Valley </li><li>Sensei en Eagle Fang Karate </li><li>Padre de Robby  </li> 
+              <div class="accordion-body"><li> Bicampeon del All Valley </li><li>Sensei en Eagle Fang Karate </li><li>Padre de Robby Keene</li> 
             </div>
           </div>
             <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
@@ -75,7 +75,7 @@
               </button>
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body"><li> Bicampeon del All Valley </li><li>Sensei en Eagle Fang Karate </li><li>Padre de Robby  </li> 
+              <div class="accordion-body"><li> Bicampeon del All Valley </li><li>Sensei en Miyagi Do Karate </li><li>Padre de Sam y Anthony</li> 
             </div>
           </div>
             <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
@@ -85,57 +85,327 @@
       </section>
       <section class="eagle-fang-theme">Miguel Diaz
         <img src="../recursos-img/miguel.webp" alt="Miguel Diaz">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Campeon del All Valley </li><li>Alumno en Eagle Fang Karate </li><li>Novio de Sam LaRusso</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cobrakai-theme">Robby Keene
         <img src="../recursos-img/robbykeene-ck1.jpeg" alt="Robby Keene">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Dos veces subcampeon del All Valley </li><li>Alumno en Cobra Kai y Miyagi Do Karate </li><li>Novio de Tory Nichols</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="miyagi-do-theme">Samantha LaRusso
         <img src="../recursos-img/sam-larusso.webp" alt="Sam LaRusso">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Hija de Daniel y Amanda LaRusso</li><li>Alumna de Miyagi Do Karate </li><li>Novia de Miguel Diaz</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cobrakai-theme">Tory Nichols
         <img src="../recursos-img/Tory-Nichols-Cobra-Kai.webp" alt="Tory Nichols">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Primera campeona femenina del All Valley </li><li>Alumna en Cobra Kai </li><li>Novia de Robby Keene</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="miyagi-do-theme">Eli "Hawk" Moskowits
         <img src="../recursos-img/hawk.personajes.webp" alt="Hawk">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Campeon del All Valley </li><li>Alumno en Miyagi Do Karate </li><li>Mejor amigo de Demetri</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="miyagi-do-theme">Demetri <br>
         <img src="../recursos-img/demetri-boludo.webp" alt="Demetri">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Alumno en Miyagi Do Karate </li><li>Mejor amigo de "Hawk"</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cobrakai-theme">Mike Barnes
         <img src="../recursos-img/mikebarnes-kk3.jpg" alt="Mike Barnes">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Antagonista de Karate Kid 3 </li><li>Alumno en Cobra Kai </li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="miyagi-do-theme">Chozen Toguchi
         <img src="../recursos-img/chozentoguchi.webp" alt="Chozen Toguchi">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Antagonista en Karate Kid 2 </li><li>Sensei en Miyagi Do Karate </li><li>Amigo de Daniel LaRusso</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="miyagi-do-theme">Sr.Miyagi
         <img src="../recursos-img/miyagifotopersona.webp" alt="Sr.Miyagi">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Fundador del Miyagi Do Karate </li><li>Sensei de Daniel Larusso </li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cobrakai-theme">Terry Silver
         <img src="../recursos-img/Terry_Silver_personaje.webp" alt="Terry Silver">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Co-fundador de Cobra Kai </li><li>Millonario </li><li>Participo en la guerra de Vietnam</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cobrakai-theme">John Kreese
         <img src="../recursos-img/John_Kreese_Young.webp" alt="John Kreese">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Co-fundador de Cobra Kai </li><li>Sensei en Cobra Kai </li><li>Participo en la guerra de Vietnam</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="miyagi-do-theme">Anthony LaRusso
         <img src="../recursos-img/anthonylarusso.jpg" alt="Anthonylarusso">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Alumno de Miyagi Do Karate </li><li>Hermano de Sam LaRusso </li><li>Hijo de Daniel y Amanda LaRusso</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cobrakai-theme">Kyler Park
         <img src="../recursos-img/KylerSeason4.webp" alt="Kyler Park">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Bully de la escuela </li><li>Alumno en Cobra Kai </li><li>Ex novio de Sam LaRusso</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="nothing">Amanda LaRusso
         <img src="../recursos-img/amandalarusso.webp" alt="Amanda LaRusso">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Esposa de Daniel LaRusso </li><li>Madre de Sam y Anthony LaRusso </li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cobrakai-theme">Kenny Payne
         <img src="../recursos-img/kennypayne....webp" alt="Kenny Payne">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Alumno en Cobra Kai </li><li>Aprendiz de Robby Keene</li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="cobrakai-theme">Stingray <br>
         <img src="../recursos-img/mantaraya....webp" alt="Stingray">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Alumno de Cobra Kai </li><li>Responsable de enviar a John Kreese a prision </li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="nothing">Carmen Diaz
         <img src="../recursos-img/carmen.webp" alt="Carmen Diaz">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Madre de Miguel Diaz </li><li>Pareja de Johnny Lawrence </li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
       <section class="nothing">Ali Mills <br>
         <img src="../recursos-img/Ali_Mills_1984.jpg" alt="Ali Mils">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li>Pareja de Johnny Lawrence En su juventud </li><li>Pareja de Daniel LaRusso En su juventud </li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
       </section>
     </div>
 
