--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -47,8 +47,8 @@
   </section>
   </header>
   <main class="main-personajes">
-    <div class="grilla-personajes">
-      <section class="eagle-fang-theme">Jonny Lawrence
+    <section class="grilla-personajes">
+      <div class="eagle-fang-theme">Jonny Lawrence
         <img src="../recursos-img/johnnylawrence-kka1.jpeg" alt="Johnny Lawrence">
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
@@ -65,8 +65,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="miyagi-do-theme">Daniel LaRusso
+      </div>
+      <div class="miyagi-do-theme">Daniel LaRusso
         <img src="../recursos-img/daniel-larussokk1.jpeg" alt="Daniel LaRusso">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -83,8 +83,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="eagle-fang-theme">Miguel Diaz
+      </div>
+      <div class="eagle-fang-theme">Miguel Diaz
         <img src="../recursos-img/miguel.webp" alt="Miguel Diaz">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -101,8 +101,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="cobrakai-theme">Robby Keene
+      </div>
+      <div class="cobrakai-theme">Robby Keene
         <img src="../recursos-img/robbykeene-ck1.jpeg" alt="Robby Keene">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -119,8 +119,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="miyagi-do-theme">Samantha LaRusso
+      </div>
+      <div class="miyagi-do-theme">Samantha LaRusso
         <img src="../recursos-img/sam-larusso.webp" alt="Sam LaRusso">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -137,8 +137,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="cobrakai-theme">Tory Nichols
+      </div>
+      <div class="cobrakai-theme">Tory Nichols
         <img src="../recursos-img/Tory-Nichols-Cobra-Kai.webp" alt="Tory Nichols">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -155,8 +155,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="miyagi-do-theme">Eli "Hawk" Moskowits
+      </div>
+      <div class="miyagi-do-theme">Eli "Hawk" Moskowits
         <img src="../recursos-img/hawk.personajes.webp" alt="Hawk">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -173,8 +173,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="miyagi-do-theme">Demetri <br>
+      </div>
+      <div class="miyagi-do-theme">Demetri <br>
         <img src="../recursos-img/demetri-boludo.webp" alt="Demetri">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -191,8 +191,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="cobrakai-theme">Mike Barnes
+      </div>
+      <div class="cobrakai-theme">Mike Barnes
         <img src="../recursos-img/mikebarnes-kk3.jpg" alt="Mike Barnes">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -209,8 +209,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="miyagi-do-theme">Chozen Toguchi
+      </div>
+      <div class="miyagi-do-theme">Chozen Toguchi
         <img src="../recursos-img/chozentoguchi.webp" alt="Chozen Toguchi">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -227,8 +227,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="miyagi-do-theme">Sr.Miyagi
+      </div>
+      <div class="miyagi-do-theme">Sr.Miyagi
         <img src="../recursos-img/miyagifotopersona.webp" alt="Sr.Miyagi">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -245,8 +245,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="cobrakai-theme">Terry Silver
+      </div>
+      <div class="cobrakai-theme">Terry Silver
         <img src="../recursos-img/Terry_Silver_personaje.webp" alt="Terry Silver">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -263,8 +263,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="cobrakai-theme">John Kreese
+      </div>
+      <div class="cobrakai-theme">John Kreese
         <img src="../recursos-img/John_Kreese_Young.webp" alt="John Kreese">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -281,8 +281,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="miyagi-do-theme">Anthony LaRusso
+      </div>
+      <div class="miyagi-do-theme">Anthony LaRusso
         <img src="../recursos-img/anthonylarusso.jpg" alt="Anthonylarusso">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -299,8 +299,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="cobrakai-theme">Kyler Park
+      </div>
+      <div class="cobrakai-theme">Kyler Park
         <img src="../recursos-img/KylerSeason4.webp" alt="Kyler Park">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -317,8 +317,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="nothing">Amanda LaRusso
+      </div>
+      <div class="nothing">Amanda LaRusso
         <img src="../recursos-img/amandalarusso.webp" alt="Amanda LaRusso">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -335,8 +335,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="cobrakai-theme">Kenny Payne
+      </div>
+      <div class="cobrakai-theme">Kenny Payne
         <img src="../recursos-img/kennypayne....webp" alt="Kenny Payne">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -353,8 +353,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="cobrakai-theme">Stingray <br>
+      </div>
+      <div class="cobrakai-theme">Stingray <br>
         <img src="../recursos-img/mantaraya....webp" alt="Stingray">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -371,8 +371,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="nothing">Carmen Diaz
+      </div>
+      <div class="nothing">Carmen Diaz
         <img src="../recursos-img/carmen.webp" alt="Carmen Diaz">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -389,8 +389,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="nothing">Ali Mills <br>
+      </div>
+      <div class="nothing">Ali Mills <br>
         <img src="../recursos-img/Ali_Mills_1984.jpg" alt="Ali Mils">
         <div class="accordion accordion-flush" id="accordionFlushExample"> 
           <div class="accordion-item">
@@ -407,8 +407,8 @@
             </div>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    <!-- </div> -->
 
   </main>
 
